fix: restore filter function on map, tree and cluster lists (GECO-133) (#817)
